# t-meter

./: .gitignore  Cargo.toml  README.md  config-template.toml  config.detailed.json  config.example.json  docs.md  rustfmt.toml  test-config-generation.sh
.github/workflows/: release.yml
t-meter/: Cargo.toml
t-meter/src/: config.rs  main.rs  quotes.rs  theme.rs
