[package]
name = "t-meter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "A terminal-based day progress bar showing elapsed time and user markers"
repository = "https://github.com/yourusername/t-meter"
categories = ["command-line-utilities"]
keywords = ["tui", "time", "productivity", "rust"]

[dependencies]
tui = "0.19"
crossterm = "0.28"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
