[package]
name = "t-meter"
version = "0.3.2"
edition = "2021"
authors = ["jordanjakisa <dev.jordanempire@gmail.com>"]
license = "MIT"
description = "A terminal-based day progress bar showing elapsed time and user markers"
repository = "https://github.com/jordan-jakisa/t-meter"
categories = ["command-line-utilities"]
keywords = ["tui", "time", "productivity", "rust"]

[dependencies]
tui = "0.19"
ratatui = { version = "0.30.0-beta.0", features = ["all-widgets"]}
crossterm = "0.28"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
directories = "5.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
